# Text2CarsGeneration

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  main.py  pyproject.toml
ImageGeneration/: description_generator.py
ImageGeneration/autoencoder_experiments/: vqvae.py  vqvae_notebook.ipynb
ImageGeneration/pretrained_autoencoder/: vqvae.py
RawDatasetsPreprocessing/: brands.csv  create_shards.ipynb  multi_words_brands.csv
conf/: carconnection.yaml  compcars.yaml  config.yaml  dvmcar.yaml  stanford.yaml
config/: config.yaml
docs/: Untitled Diagram.drawio  pipeline.drawio
etl/: extract.py
src/: run_local.py
src/dependencies/: config_parsing.py  dag.py  extract_dag.py  load_dag.py  transform_dag.py
src/etl/: extract.py  load.py  resnet_experiment.py  transform.py  transform_image.py
src/etl/extract/: decompressor.py  extract.py  source.py
src/extract/: extract.py
src/load/: load_images.py  merge_meta_info.py
src/transform/: car_connection.py  comp_cars.py  stanford_cars.py
