[tool.poetry]
name = "text2carsgeneration"
version = "0.1.0"
description = ""
authors = ["Sotnikov Arkadiy <cotnikoarkady@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.5.2"
scipy = "^1.8.1"
jupyter = "^1.0.0"
helper = "^2.5.0"
pynvml = "^11.4.1"
wandb = "^0.12.18"
wget = "^3.2"
hydra-core = "^1.2.0"
torchvision = "^0.14.1"
pandas = "^1.5.2"
tqdm = "^4.64.1"
validators = "^0.20.0"
pefile = "^2022.5.30"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
