[tool.poetry]
name = "text2carsgeneration"
version = "0.1.0"
description = ""
authors = ["Sotnikov Arkadiy <cotnikoarkady@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
scipy = "^1.8.1"
hydra-core = "^1.2.0"
tqdm = "^4.64.1"
omegaconf = "^2.3.0"
torchvision = "^0.15.1"
torch = "^2.0.0"
pandas = "^2.0.1"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
deptry = "^0.9.0"
pre-commit = "^3.3.1"

[tool.black]
line-length = 120
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_unused_configs = "True"
warn_unused_ignores = "True"
warn_redundant_casts = "True"
warn_unreachable = "True"
disallow_untyped_defs = "True"

[tool.ruff]
target-version = "py310"
line-length = 120
fix = true
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
